@@ -1,5 +1,6 @@
 2011-01-12  Jigal van Hemert  <jigal@xs4all.nl>
 
+	* Fixed issue #16806: pages_language_overlay does not fit new page layout 
 	* Follow-up to #16986: Grid wizard miss tooltips and localization
 
 2011-01-12  Steffen Kamper  <steffen@typo3.org>
